[metadata]
name = FVS
version = 0.3.3
author = Mirko Brombin
author_email = send@mirko.pm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mirkobrombin/FVS
project_urls =
    Bug Tracker = https://github.com/mirkobrombin/FVS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
[options]
python_requires = >=3.9